--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   cunning_document_scanner: ^1.2.3
   pdf: ^3.11.3
   path_provider: ^2.1.5
+  file_picker: ^10.2.0
+  permission_handler: ^11.4.0
+  flutter_file_dialog: ^3.0.2
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
